--- a/part1/anecdotes/src/App.css
+++ b/part1/anecdotes/src/App.css
@@ -1,12 +1,18 @@
-.App {
+* {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+}
+
+.App {
   text-align: center;
   display: flex;
   flex-flow: column;
   align-items: center;
   justify-content: center;
+}
+
+.App-header {
 }
 
 .App-ButtonList {
@@ -35,7 +41,7 @@
   text-align: center;
 }
 
-.App-text li:last-child {
+.App-Votes {
   background-color: red;
   border-radius: 0.5ch;
   color: white;
